kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrtp-service
  namespace: training
spec:
  selector:
    app: scrtp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
